--- a/src/styles/themes/_light-default.scss
+++ b/src/styles/themes/_light-default.scss
@@ -70,6 +70,10 @@
   // Overlay
   --color-overlay: rgba(0, 0, 0, 0.5);
 
+  // Skeleton loading colors
+  --color-skeleton: #cbd5e1;
+  --color-skeleton-wave: rgba(255, 255, 255, 0.7);
+
   // Shadows
   --shadow-sm: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
   --shadow-base: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
