--- a/src/styles/themes/_high-contrast-light.scss
+++ b/src/styles/themes/_high-contrast-light.scss
@@ -70,6 +70,10 @@
   // Overlay
   --color-overlay: rgba(0, 0, 0, 0.6);
 
+  // Skeleton loading colors
+  --color-skeleton: #b3b3b3;
+  --color-skeleton-wave: rgba(255, 255, 255, 0.8);
+
   // Shadows - more defined
   --shadow-sm: 0 1px 2px 0 rgba(0, 0, 0, 0.15);
   --shadow-base: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 1px 2px -1px rgba(0, 0, 0, 0.2);
