--- a/src/styles/themes/_light-warm.scss
+++ b/src/styles/themes/_light-warm.scss
@@ -70,6 +70,10 @@
   // Overlay
   --color-overlay: rgba(28, 25, 23, 0.5);
 
+  // Skeleton loading colors
+  --color-skeleton: #d6d3d1;
+  --color-skeleton-wave: rgba(255, 255, 255, 0.7);
+
   // Shadows - slightly warmer tint
   --shadow-sm: 0 1px 2px 0 rgba(28, 25, 23, 0.05);
   --shadow-base: 0 1px 3px 0 rgba(28, 25, 23, 0.1), 0 1px 2px -1px rgba(28, 25, 23, 0.1);
