--- a/src/styles/themes/_light-default.scss
+++ b/src/styles/themes/_light-default.scss
@@ -40,7 +40,7 @@
   --color-on-error: #ffffff; // Change to white for better contrast on dark red
 
   // Semantic colors - Info
-  --color-info: #0ea5e9;
+  --color-info: #0a7aae;
   --color-info-hover: #0284c7;
   --color-info-subtle: #f0f9ff;
   --color-on-info: #0f172a;
