--- a/src/styles/themes/_variables.scss
+++ b/src/styles/themes/_variables.scss
@@ -242,4 +242,7 @@
   --z-tooltip: 1070;
   --z-toast: 1080;
   --z-overlay: 9999;
+  // Component specific - Tabs
+  --color-tab-background: transparent;
+  --color-tab-background-active: transparent;
 }
