refactor(textarea): improve storybook and test-runner

--- a/src/app/shared/components/textarea/textarea.component.html
+++ b/src/app/shared/components/textarea/textarea.component.html
@@ -9,7 +9,7 @@
     >
       {{ label() }}
       @if (required()) {
-        <span class="textarea__label__required" aria-label="required">*</span>
+        <span class="textarea__label__required" aria-hidden="true">*</span>
       }
     </label>
   }
