refactor(toast): improve styles and storybook

--- a/src/app/shared/components/toast/toast.component.html
+++ b/src/app/shared/components/toast/toast.component.html
@@ -5,7 +5,7 @@
   [attr.aria-atomic]="true"
 >
   <!-- Icon -->
-  <div class="toast__icon" [attr.aria-label]="variantIconLabel()">
+  <div class="toast__icon">
     <eb-icon
       [name]="variantIconName()"
       size="md"
