--- a/src/styles/themes/_light-default.scss
+++ b/src/styles/themes/_light-default.scss
@@ -43,7 +43,7 @@
   --color-info: #0a7aae;
   --color-info-hover: #0284c7;
   --color-info-subtle: #f0f9ff;
-  --color-on-info: #0f172a;
+  --color-on-info: #ffffff;
 
   // Surface colors
   --color-background: #ffffff;
