style(select): adjust select option selected state color

--- a/src/app/shared/components/select/select-option/select-option.component.scss
+++ b/src/app/shared/components/select/select-option/select-option.component.scss
@@ -25,7 +25,7 @@
   // Selected state
   &--selected {
     background-color: rgba(var(--color-primary-rgb), 0.1);
-    color: var(--color-primary);
+    color: var(--color-primary-hover);
 
     &:hover {
       background-color: rgba(var(--color-primary-rgb), 0.15);
