--- a/src/app/shared/components/icon/icon.component.scss
+++ b/src/app/shared/components/icon/icon.component.scss
@@ -7,8 +7,7 @@
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
-  vertical-align: middle;
-  line-height: var(--line-height-extra-tight);
+  line-height: 0; // Remove line-height influence for precise alignment
 
   // Ensure icons don't cause layout shifts
   width: fit-content;
@@ -97,6 +96,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -107,6 +107,7 @@
   100% {
     opacity: 1;
   }
+
   50% {
     opacity: 0.5;
   }
