--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -31,7 +31,7 @@
         <eb-language-switcher variant="dropdown" size="sm" />
 
         <!-- Theme Picker -->
-        <eb-theme-picker variant="dropdown" size="sm" />
+        <eb-theme-picker variant="icon" />
 
         <!-- Auth Actions -->
         @if (isAuthenticated()) {
