feat(theme-picker): add tooltip

--- a/src/app/shared/components/theme-picker/theme-picker.component.html
+++ b/src/app/shared/components/theme-picker/theme-picker.component.html
@@ -141,6 +141,7 @@
           [attr.aria-expanded]="isOpen()"
           aria-haspopup="listbox"
           [attr.aria-label]="'Change theme, current theme: ' + currentTheme().name"
+          [ebTooltip]="changeThemeTooltip"
           (click)="toggleDropdown()"
           (keydown)="handleKeydown($event)"
         >
